Loc for Prussia

--- a/localisation/english/PB_Prussia_l_english.yml
+++ b/localisation/english/PB_Prussia_l_english.yml
@@ -339,7 +339,7 @@
   PB_PRS_Seize_Royal_Wealth:0 "Seize Royal Wealth"
   PB_PRS_Seize_Royal_Wealth_desc:0 ""
   PB_PRS_The_Ministry_For_Industrial_Development:0 "The Ministry For Industrial Development"
-  PB_PRS_The_Ministry_For_Industrial_Development_desc:0 ""
+  PB_PRS_The_Ministry_For_Industrial_Development_desc:0 "Our nation may be small, but it is not without power. Our culture stands strong, defended by a professional and experienced military, but our economy is still heavily reliant on Russia. To ensure we have the strength to liberate our German brothers in the west, we must ensure our own economic independence. We must improve the effiency of our industry and expand our factories into the limted space we have. For every acre of land shall produce enough munitions to fuel our war machine."
   PB_PRS_Expand_The_Heavy_Armaments_Industry:0 "Expand The Heavy Armaments Industry"
   PB_PRS_Expand_The_Heavy_Armaments_Industry_desc:0 ""
   PB_PRS_The_Prussian_National_Union:0 "The Prussian National Union"
@@ -352,10 +352,6 @@
   PB_PRS_Workers_Fueled_By_Ideology_desc:0 ""
   PB_PRS_The_Oil_Issue:0 "The Oil Issue"
   PB_PRS_The_Oil_Issue_desc:0 ""
-  PB_PRS_Request_Pacte_Assistance:0 "Request Pacte Assistance"
-  PB_PRS_Request_Pacte_Assistance_desc:0 ""
-  PB_PRS_Rely_On_Local_Experts:0 "Rely On Local Experts"
-  PB_PRS_Rely_On_Local_Experts_desc:0 ""
   PB_PRS_Finalize_The_Danzig_Renovations:0 "Finalize The Danzig Renovations"
   PB_PRS_Finalize_The_Danzig_Renovations_desc:0 "Our revitalisation of Danzig has almost come to fruition, with our ongoing projects to modernise port facilities and lift the people out of poverty having succeeded thus far. With a final concerted effort we can wrap up these renovations and show Danzig as a model city for the new Prussia."
   PB_PRS_Cram_The_Workshops:0 "Cram The Workshops"
@@ -377,7 +373,7 @@
   PB_PRS_Prussian_Efficiency:0 "Prussian Efficiency"
   PB_PRS_Prussian_Efficiency_desc:0 ""
   PB_PRS_Science_Without_Hinderance:0 "Science Without Hinderance"
-  PB_PRS_Science_Without_Hinderance_desc:0 ""
+  PB_PRS_Science_Without_Hinderance_desc:0 "Our nation is host to some of the great scientists and engineers in all of Europe. Individuals restricted only by the laws and morality society had imposed upon them. But no more, our scientists shall no longer be bound by petty morality, only by practicality. We shall remove virtually all restrictions for scientific advancement within our nation, we shall create great engines of war, biomechanical terrors and automated machines to ensure our citizens enjoy the finest of lives. When we open the gates of war, our enemies will be flooded by our creations."
   PB_PRS_The_Mind:0 "The Mind"
   PB_PRS_The_Mind_desc:0 ""
   PB_PRS_The_Heart:0 "The Heart"
@@ -402,28 +398,24 @@
   PB_PRS_Our_Only_Hope_desc:0 ""
   PB_PRS_No_Morality_For_The_Strong:0 "No Morality For The Strong"
   PB_PRS_No_Morality_For_The_Strong_desc:0 ""
-  PB_PRS_Maintain_Racial_Standards:0 "Maintain Racial Standards"
-  PB_PRS_Maintain_Racial_Standards_desc:0 ""
-  PB_PRS_Reach_Out_To_The_Collaborationists:0 "Reach Out To The Collaborationists"
-  PB_PRS_Reach_Out_To_The_Collaborationists_desc:0 ""
   PB_PRS_Prussia_On_The_World_Stage:0 "Prussia On The World Stage"
-  PB_PRS_Prussia_On_The_World_Stage_desc:0 ""
+  PB_PRS_Prussia_On_The_World_Stage_desc:0 "The territorial integrity of Prussia is shaky at best. We are surrounded by nations who want nothing more than to see the idea of an independent Prussian nation squashed or at the very least one subservient to their retched government. We will no longer bend the knee, today we make a stand for the future of our nation and our people."
   PB_PRS_The_Memel_Convention:0 "The Memel Convention"
-  PB_PRS_The_Memel_Convention_desc:0 ""
+  PB_PRS_The_Memel_Convention_desc:0 "While Memel may house a majority Russobaltic population the region was under German ethnic rule for a number of centuries, until the rotten treaty of Tours destroyed years of rich Prussian history within the state. Today we will reverse such a wrong, although we are entirely at the mercy of Russia’s diplomats.  "
   PB_PRS_Seek_New_Finacial_Partners:0 "Seek New Financial Partners"
-  PB_PRS_Seek_New_Finacial_Partners_desc:0 ""
+  PB_PRS_Seek_New_Finacial_Partners_desc:0 "As our state continues to grow so does the demand for new investment sectors, by granting tax incentives to foreign enterprises from countries ideologically aligned with us can we meet this economic shortcoming.  "
   PB_PRS_A_Reich_Of_Our_Own:0 "A Reich Of Our Own"
-  PB_PRS_A_Reich_Of_Our_Own_desc:0 ""
+  PB_PRS_A_Reich_Of_Our_Own_desc:0 "For far too long we have remained under the Austrian formed United Kingdoms of Germany, there was once a time though where we remained the leading German power. Let us reverse this great national stain and reclaim what was rightfully stolen from us."
   PB_PRS_Anti_Jacobin_Crusade:0 "Anti-Jacobin Crusade"
-  PB_PRS_Anti_Jacobin_Crusade_desc:0 ""
+  PB_PRS_Anti_Jacobin_Crusade_desc:0 "Jacobin is an ideological disease that has been permitted to thrive for far too long. We must stamp out this extreme leftist curse wherever it may rear its ugly head, once and for all.  "
   PB_PRS_Promote_Europeanism:0 "Promote Europeanism"
-  PB_PRS_Promote_Europeanism_desc:0 ""
+  PB_PRS_Promote_Europeanism_desc:0 "Europe, a bastion of progress and civilization showered in a cloud of misery. Our legacy is rich in history and this medieval line of thinking that we are somehow distinct will cost us our global dominance. Unity is strength and if we don’t deal with our ideological differences then our future will be nothing more than a footnote in the history textbooks."
   PB_PRS_Demand_Authority_Over_Berlin:0 "Demand Authority Over Berlin"
-  PB_PRS_Demand_Authority_Over_Berlin_desc:0 ""
+  PB_PRS_Demand_Authority_Over_Berlin_desc:0 "The time has come for us to step on the toes of Europe’s raging bear, we have kissed the feet of Moscow for too long and if they think that we are willing to send our brave young boys to die and expect nothing in return then they are either too stupid or too drunk; likely both.\n\nIt has been our destiny to unite with the old Prussian regions of Brandenburg since Bouhler’s coming of power, and nothing will prevent us from pursing such a goal."
   PB_PRS_Our_Greatest_Hour:0 "Our Greatest Hour"
   PB_PRS_Our_Greatest_Hour_desc:0 "From the ashes of the old order Prussia rises reborn. No longer will the hedonistic Hapsburgs and their degenerate cohort define Germany; with our victory we will remould the wider Germanic people in line with the example of the honourable Prussian. Already their former palaces of decadence, the brothels and the cabaret halls, are being torn down to be replaced with marble idols of victory.\n\nLet our victory echo for a hundred years hence, for in time all Germany will kneel to Prussia."
   PB_PRS_The_Reich_In_A_New_Age:0 "The Reich In A New Age"
-  PB_PRS_The_Reich_In_A_New_Age_desc:0 ""
+  PB_PRS_The_Reich_In_A_New_Age_desc:0 "After so long, victory has finally been achieved. The flag of the Prussian Reich waves over Frankfurt, Berlin and Munich, the traitorous German Federation now stands in ruins. For most of our history, we spoke of the eventual, inevitable victory over our enemies. The glorious Fatherland we would create! And now our people watch with bated breath, eager to see what we will create. The road ahead is by no means easy, we must rebuild, restore and revitalise. But our of the rubble of war, will come a new Germany! Heil Reich!"
   PB_PRS_Revitalize_The_Academy:0 "Revitalize The Academy"
   PB_PRS_Revitalize_The_Academy_desc:0 ""
   PB_PRS_Reinforce_The_Baltic_Fleet:0 "Reinforce The Baltic Fleet"
