Prussian Anarcho tree stuff

--- a/localisation/english/PB_Prussia_l_english.yml
+++ b/localisation/english/PB_Prussia_l_english.yml
@@ -71,6 +71,7 @@
   PRS_Secure_Black_Market_Oil_tt:0 "§RThis is a one time decision that can be used if Prussia's fuel reserves are low!§!"
   PRS_Open_New_Academies_tt:0 "\nAdds a new hidden national spirit:\n"
   PRS_Impending_Royal_Coup_tt:0 "§gThe Junkers will take power through a bloody coup and restore the Prussian monarchy§!\n\nThis will load the Anarcho-Lib focus tree for Prussia, purging the Junkers by completing the focus '§HLiquidate The Princes§! and letting the Royal Coup timer tick down will result in some alternative options in the Anarcho-Lib tree."
+  prussia_focus_anarcho:0 "Prussian Anarcho-Lib Tree"
 
   ##########################
   # MECHANICS
@@ -274,6 +275,8 @@
   # FOCUS
   ##########################
 
+  ## NEO-IMP
+
   PB_PRS_Prussian_Hydra:0 "The Prussian Hydra"
   PB_PRS_Prussian_Hydra_desc:0 ""
   PB_PRS_Appeal_To_The_German_Diaspora:0 "Appeal To The German Diaspora"
@@ -426,6 +429,83 @@
   PB_PRS_Supremacy_Of_The_Will_desc:0 ""
   PB_Placate_The_War_Profiteers:0 "Placate The War Profiteers"
   PB_Placate_The_War_Profiteers_desc:0 ""
+
+  ## ANARCHO-LIB
+
+  PB_PRS_Imperial_Restoration:0 "Imperial Restoration"
+  PB_PRS_Imperial_Restoration_desc:0 ""
+  PB_PRS_A_Light_In_The_Abyss:0 "A Light In The Abyss"
+  PB_PRS_A_Light_In_The_Abyss_desc:0 ""
+  PB_PRS_Restore_Imperial_Connections:0 "Restore Imperial Connections"
+  PB_PRS_Restore_Imperial_Connections_desc:0 ""
+  PB_PRS_Concord_With_Democracy:0 "Concord With Democracy"
+  PB_PRS_Concord_With_Democracy_desc:0 ""
+  PB_PRS_Restore_The_Houses:0 "Restore The Houses"
+  PB_PRS_Restore_The_Houses_desc:0 ""
+  PB_PRS_Venerate_The_Old:0 "Venerate The Old"
+  PB_PRS_Venerate_The_Old_desc:0 ""
+  PB_PRS_Continue_The_Aristroctatic_Legacy:0 "Continue The Aristroctatic Legacy"
+  PB_PRS_Continue_The_Aristroctatic_Legacy_desc:0 ""
+  PB_PRS_The_Nobles_Due:0 "The Nobles Due"
+  PB_PRS_The_Nobles_Due_desc:0 ""
+  PB_PRS_Mobilize_The_New_Blood:0 "Mobolize The New Blood"
+  PB_PRS_Mobilize_The_New_Blood_desc:0 ""
+  PB_PRS_A_New_Path:0 "A New Path"
+  PB_PRS_A_New_Path_desc:0 ""
+  PB_PRS_The_First_Citizens:0 "The First Citizens"
+  PB_PRS_The_First_Citizens_desc:0 ""
+  PB_PRS_Forged_In_Fire:0 "Forged In Fire"
+  PB_PRS_Forged_In_Fire_desc:0 ""
+  PB_PRS_Revert_The_Great_Rot:0 "Revert The Great Rot"
+  PB_PRS_Revert_The_Great_Rot_desc:0 ""
+  PB_PRS_A_Just_Hand:0 "A Just Hand"
+  PB_PRS_A_Just_Hand_desc:0 ""
+  PB_PRS_Reeducation_Efforts:0 "Re-education Efforts"
+  PB_PRS_Reeducation_Efforts_desc:0 ""
+  PB_PRS_The_New_Guard:0 "The New Guard"
+  PB_PRS_The_New_Guard_desc:0 ""
+  PB_PRS_Not_A_Stone_Unturned:0 "Not A Stone Unturned"
+  PB_PRS_Not_A_Stone_Unturned_desc:0 ""
+  PB_PRS_Out_With_The_Fanatics:0 "Out With The Fanatics"
+  PB_PRS_Out_With_The_Fanatics_desc:0 ""
+  PB_PRS_A_Legacy_Saved:0 "A Legacy Saved"
+  PB_PRS_A_Legacy_Saved_desc:0 ""
+  PB_PRS_The_New_Imperial_Man:0 "The New Imperial Man"
+  PB_PRS_The_New_Imperial_Man_desc:0 ""
+  PB_PRS_Declare_The_Kingdom:0 "Declare The Kingdom"
+  PB_PRS_Declare_The_Kingdom_desc:0 ""
+  PB_PRS_Petition_Germany:0 "Petition Germany"
+  PB_PRS_Petition_Germany_desc:0 ""
+  PB_PRS_A_Whip_Against_Neo_Imperialism:0 "A Whip Against Neo-Imperialism"
+  PB_PRS_A_Whip_Against_Neo_Imperialism_desc:0 ""
+  PB_PRS_State_Visit_To_London:0 "A State Visit To London"
+  PB_PRS_State_Visit_To_London_desc:0 ""
+  PB_PRS_Alliance_With_The_Anglos:0 "Alliance With The Anglos"
+  PB_PRS_Alliance_With_The_Anglos_desc:0 ""
+  PB_PRS_Amercican_Overtures:0 "American Overtures"  
+  PB_PRS_Amercican_Overtures_desc:0 ""
+  PB_PRS_Surrounded_By_Fools_And_Tyrants:0 "Surrouned By Fools And Tyrants"
+  PB_PRS_Surrounded_By_Fools_And_Tyrants_desc:0 ""
+  PB_PRS_Stay_The_Course:0 "Stay The Course"
+  PB_PRS_Stay_The_Course_desc:0 ""
+  PB_PRS_Declare_The_New_Empire:0 "Declare The New Empire"
+  PB_PRS_Declare_The_New_Empire_desc:0 ""
+  PB_PRS_Reform_The_Royal_Army:0 "Reform The Royal Army"
+  PB_PRS_Reform_The_Royal_Army_desc:0 ""
+  PB_PRS_Reform_The_Royal_Airforce:0 "Reform The Royal Airforce"
+  PB_PRS_Reform_The_Royal_Airforce_desc:0 ""
+  PB_PRS_Reform_The_Royal_Navy:0 "Reform The Royal Navy"
+  PB_PRS_Reform_The_Royal_Navy_desc:0 ""
+  PB_PRS_Europes_Eastern_Legion:0 "Europe's Eastern Legion"
+  PB_PRS_Europes_Eastern_Legion_desc:0 ""
+  PB_PRS_Demand_Memel:0 "Demand Memel"
+  PB_PRS_Demand_Memel_desc:0 ""
+  PB_PRS_Contact_Pilsudski:0 "Contact Pilsudski"
+  PB_PRS_Contact_Pilsudski_desc:0 ""
+  PB_PRS_Teutonic_Legacy:0 "Teutonic Legacy"
+  PB_PRS_Teutonic_Legacy_desc:0 ""
+  PB_PRS_Arm_The_Forest_Brothers:0 "Arm The Forest Brothers"
+  PB_PRS_Arm_The_Forest_Brothers_desc:0 ""
 
   ##########################
   # EVENTS
