More Prussia stuff

--- a/localisation/english/PB_Prussia_l_english.yml
+++ b/localisation/english/PB_Prussia_l_english.yml
@@ -1,7 +1,7 @@
 ﻿l_english:
 
   ###Topbar
-  PRS_Country_Desc_Topbar:0 "§YFeatures:§!\n    - Reclaim the glory of Prussia\n    - Discover the origin of the Prussian people\n    - End the Anglo-German hegemony once and for all\n    - Or tear down Bouhler's dogmatic regime and restore the Prussian monarchy\n\n§YSituation:§!\nThe Independent State of Prussia, for a short while, had remained under the direct control of the Russian monarchy, this seemed to be the fate of the nation until the ethnic unrests that St. Petersburg faced in the early 20s had granted the nation a once in a lifetime opportunity to claw itself out of its hastily dug grave and write the wrongs of the past. The history of Russian occupation is one filled with few facts or notable events, seemingly the only thought on every Prussians’ mind was survival against the struggles of everyday life.\n\nThe old conservative leadership of Prussia had allied itself with the Bourbons prior to the outbreak of the First Great War, a decision that would cost the nation it’s very independence with the signing of the Treaty of Tours. It wouldn’t be until Russia’s failure to calm its many non-Russian ethnic groups that Prussia would see itself shortly proclaim its renewed independence under a liberal constitutional-monarchy, this government however was short lived. Bouhler, a mere cavalry officer, would march on Königsberg alongside thousands of disfranchised Prussian veterans of the Great War, leading to the establishment of the Vaterlandsfront and the death of democracy in the nation.\n\nFew know the course Prussia will take in the following months, rumours can be heard that the old aristocratic elements of the Prussian military and government are plotting to overthrow Bouhler and his twisted regime, only time can tell though.\n\nThe §YIndependent State of Prussia§! is an §HEmerging Power§!\n\n§YSpecial thanks to§!:\nBernie, Stallone, Lofn, Two-Watt, Wolfxe, Nilo, Mimi, Globus, Alfred/Fausi, BoringIndividual, Jubs, Tapir, Weis, Erwin, Jackie, Beezlebub, Zerogamer, SilentKing, Soble, Red, and Arj.\n\n"
+  PRS_Country_Desc_Topbar:0 "§YFeatures:§!\n    - Reclaim the glory of Prussia\n    - Discover the origin of the Prussian people\n    - End the Anglo-German hegemony once and for all\n    - Or restore the Prussian monarchy\n\n§YSituation:§!\nThe Independent State of Prussia, for a short while, had remained under the direct control of the Russian monarchy, this seemed to be the fate of the nation until the ethnic unrests that St. Petersburg faced in the early 20s had granted the nation a once in a lifetime opportunity to claw itself out of its hastily dug grave and write the wrongs of the past. The history of Russian occupation is one filled with few facts or notable events, seemingly the only thought on every Prussians’ mind was survival against the struggles of everyday life.\n\nThe old conservative leadership of Prussia had allied itself with the Bourbons prior to the outbreak of the First Great War, a decision that would cost the nation it’s very independence with the signing of the Treaty of Tours. It wouldn’t be until Russia’s failure to calm its many non-Russian ethnic groups that Prussia would see itself shortly proclaim its renewed independence under a liberal constitutional-monarchy, this government however was short lived. Bouhler, a mere cavalry officer, would march on Königsberg alongside thousands of disfranchised Prussian veterans of the Great War, leading to the establishment of the Vaterlandsfront and the death of democracy in the nation.\n\nFew know the course Prussia will take in the following months, rumours can be heard that the old aristocratic elements of the Prussian military and government are plotting to overthrow Bouhler and his twisted regime, only time can tell though.\n\nThe §YIndependent State of Prussia§! is an §HEmerging Power§!\n\n§YSpecial thanks to§!:\nBernie, Stallone, Lofn, Two-Watt, Wolfxe, Nilo, Mimi, Globus, Alfred/Fausi, BoringIndividual, Jubs, Tapir, Weis, Erwin, Jackie, Beezlebub, Zerogamer, SilentKing, Soble, Red, and Arj.\n\n"
 
   ##########################
   # LEADERS
@@ -506,6 +506,51 @@
   PB_PRS_Teutonic_Legacy_desc:0 ""
   PB_PRS_Arm_The_Forest_Brothers:0 "Arm The Forest Brothers"
   PB_PRS_Arm_The_Forest_Brothers_desc:0 ""
+  PB_PRS_Economic_Restructuring:0 "Economic Restructuring"
+  PB_PRS_Economic_Restructuring_desc:0 ""
+  PB_PRS_Recalibrate_The_Factories:0 "Recalibrate The Factories"
+  PB_PRS_Recalibrate_The_Factories_desc:0 ""
+  PB_PRS_Privatization_Efforts:0 "Privatization Efforts"
+  PB_PRS_Privatization_Efforts_desc:0 ""
+  PB_PRS_Chat_With_The_Bankers:0 "Chat With The Bankers"
+  PB_PRS_Chat_With_The_Bankers_desc:0 ""
+  PB_PRS_Drive_The_Gears_Of_Industry:0 "Drive The Gears Of Industry"
+  PB_PRS_Drive_The_Gears_Of_Industry_desc:0 ""
+  PB_PRS_Strengthen_The_Free_Market:0 "Strengthen The Free Market"
+  PB_PRS_Strengthen_The_Free_Market_desc:0 ""
+  PB_PRS_Industrial_Build_Up:0 "Industrial Build-Up"
+  PB_PRS_Industrial_Build_Up_desc:0 ""
+  PB_PRS_The_Royal_Konigsberg_Armoury:0 "The Royal Königsberg Armoury"
+  PB_PRS_The_Royal_Konigsberg_Armoury_desc:0 ""
+  PB_PRS_Duty_Calls:0 "Duty Calls"
+  PB_PRS_Duty_Calls_desc:0 ""
+  PB_PRS_Prussias_Grandest_Minds:0 "Prussia's Grandest Minds"
+  PB_PRS_Prussias_Grandest_Minds_desc:0 ""
+  PB_PRS_Mother_Nature_Tamed:0 "Mother Nature Tamed"
+  PB_PRS_Mother_Nature_Tamed_desc:0 ""
+  PB_PRS_Expand_The_Arsenals:0 "Expand The Arsenals"
+  PB_PRS_Expand_The_Arsenals_desc:0 ""
+  PB_PRS_Salvation_Through_Sacrifice:0 "Salvation Through Sacrifice"
+  PB_PRS_Salvation_Through_Sacrifice_desc:0 ""
+  PB_PRS_Liberation_Through_Dedication:0 "Liberation Through Dedication"
+  PB_PRS_Liberation_Through_Dedication_desc:0 ""
+  PB_PRS_Imprison_Radical_Agitators:0 "Imprison Radical Agitators"
+  PB_PRS_Imprison_Radical_Agitators_desc:0 ""
+  PB_PRS_Secure_The_State:0 "Secure The State"
+  PB_PRS_Secure_The_State_desc:0 ""
+  PB_PRS_What_Could_Have_Been:0 "What Could Have Been"
+  PB_PRS_What_Could_Have_Been_desc:0 ""
+  PB_PRS_Banish_Dissidents:0 "Banish Dissidents"
+  PB_PRS_Banish_Dissidents_desc:0 ""
+  PB_PRS_Never_Again:0 "Never Again"
+  PB_PRS_Never_Again_desc:0 ""
+  PB_PRS_The_Enemy_Of_My_Enemy:0 "The Enemy Of My Enemy"
+  PB_PRS_The_Enemy_Of_My_Enemy_desc:0 ""
+  PB_PRS_Imperial_Militias:0 "Imperial Militias"
+  PB_PRS_Imperial_Militias_desc:0 ""
+  PB_PRS_The_Kingdom_Is_Whole:0 "The Kingdom Is Whole"
+  PB_PRS_The_Kingdom_Is_Whole_desc:0 ""
+
 
   ##########################
   # EVENTS
