--- a/localisation/english/PB_Super_Technologies_l_english.yml
+++ b/localisation/english/PB_Super_Technologies_l_english.yml
@@ -21,3 +21,7 @@
 
   SPTECH_Constructed_Intelligence_TEXT:0 "§CConstructed Intelligence§!\n\nAllows Recruitment of §CConstructed Intelligence Advisors§! and §CGenerals§!\n\n§CResearch Speed§! increased by §G15%§!\n\n"Nothing is stranger to man than his own image." - §YRossum's Universal Robots§!"
   SPTECH_Constructed_Intelligence_CLOSETEXT:0 "§CHELLO WORLD§!"
+
+  SPTECH_Recursive_Immortality_TEXT:0 "§CRecursive Immortality§!\n\nGenerals will no longer die of old age and gain the §CRecursive Immortality§! trait, granting a §G-75%§! Chance of Illness and Wounding Chance.\n\n"Death borders upon our birth; and our cradle stands in our grave."\n- §YJoseph Hall§!"
+  SPTECH_Recursive_Immortality_CLOSETEXT:0 "§CTHE LAST ENEMY THAT SHALL BE DESTROYED§!"
+  
