Russian Okhrana Mechanic Setup

--- a/localisation/english/PB_Russia_l_english.yml
+++ b/localisation/english/PB_Russia_l_english.yml
@@ -88,6 +88,62 @@
   ########################## 
   # Decisions
   ##########################
+  PB_RUS_Okhrana:0 "The Second Time of Troubles"
+  PB_RUS_Okhrana_desc:0 "\n\n\n\n\n\nThe so-called §YFirst National Awakening§! ended in the defeat of the nationalist forces, yet for many the wars of independence never ended. Across the Ukraine, Poland, the Baltics, and Finland nationalist forces continue to struggle against Russian rule. Combating this is the §YDepartment for Protecting the Public Security and Order§!, colloquially known as the §YOkhrana§! or Guard Department. Previously just the state security apparatus of the Empire, the Okhrana was expanded dramatically following the Nationalist Rebellions to combat the remnant rebel forces.\n\nThe Okhrana is reliant on resources provided §Ymonthly§!; these resources must be used carefully to target and eliminate key figures in the secessionist movements to reduce their power. Additional §Ymonthly resources§! can be acquired by expanding Okhrana operations centers; however, these will require a large initial investment before becoming operational.\n\nOur goal is the §rdecapitation§! of rebel leadership, however eliminating leaders of rebel factions may drive them in different ideological directions and lead to other figures assuming command of the movement. A rebel group is §Yonly§! fully defeated once §Yall§! the most noteworthy members of their leadership are liquidated.\n\nIf the Okhrana fails to control the power of a rebel group, there may be §rdrastic§! consequences if they perceive us to be weak or distracted.\n\nCurrently, the Okhrana has access to £RUS_Okhrana_Resources §G[?RUS.RUS_Okhrana_Resources]§! resources\n\n§YPolish Resistance Power:§! [?RUS.RUS_Polish_Resistance_Power]%\n§YUkrainian Resistance Power:§! [?RUS.RUS_Ukraine_Resistance_Power]%\n§YBaltic Resistance Power:§! [?RUS.RUS_Baltic_Resistance_Power]%\n§YFinnish Resistance Power:§! [?RUS.RUS_Finnish_Resistance_Power]%\n\n\n\n\n\n\n\n\n\n\n\n\n"
+
+  RUS_OKH_Polish_Resistance_Pilsudski_Leader:0 "£RUS_Pilsudski_Target"
+  RUS_OKH_Polish_Resistance_Komorowski_Leader:0 "£RUS_Komorski_Target"
+  RUS_OKH_Polish_Resistance_Witos_Leader:0 "£RUS_Witos_Target"
+  RUS_OKH_Polish_Resistance_Leader_tooltip:0 "[get_polish_resistance_leader_desc]"
+  RUS_OKH_Polish_Resistance_Pilsudski_Leader_Desc:0 "§YJózef Piłsudski§! is the current figurehead of the Polish Resistance\n\n§YIdeology:§! Pragmatist Jacobin"
+  RUS_OKH_Polish_Resistance_Komorowski_Leader_Desc:0 "§YTadeusz Bór-Komorowski§! is the current figurehead of the Polish Resistance\n\n§YIdeology:§! Conservative"
+  RUS_OKH_Polish_Resistance_Witos_Leader_Desc:0 "§YWincenty Witos§! is the current figurehead of the Polish Resistance\n\n§YIdeology:§! Agrarian Liberalism"
+
+  RUS_OKH_No_Polish_SubCommander_1_Portrait:0 "£RUS_Resistance_Target_Vacant"
+  RUS_OKH_Komorowski_SubCommander_1_Portrait:0 "£RUS_Komorski_Target"
+  RUS_OKH_Oziewicz_SubCommander_1_Portrait:0 "£RUS_Oziewicz_Target"
+  RUS_OKH_Polish_Resistance_SubCommander1_tooltip:0 "[get_polish_resistance_SubCommander1_Desc]"
+  RUS_OKH_No_Polish_SubCommander_1_Desc:0 "This Position within the Polish Resistance is Currently Vacant"
+  RUS_OKH_Komorowski_SubCommander_1_Desc:0 "§YTadeusz Bór-Komorowski§! is an active leader of the Polish Resistance\n\n§YIdeology:§! Conservative"
+  RUS_OKH_Oziewicz_SubCommander_1_Desc:0 "§YIgnacy Oziewicz§! is an active leader of the Polish Resistance\n\n§YIdeology:§! Ultramilitarist"
+  RUS_OKH_Karski_SubCommander_1_Desc:0 "§YJan Karski§! is an active leader of the Polish Resistance\n\n§YIdeology:§! Liberalism"
+  RUS_OKH_Chruschiel_SubCommander_1_Desc:0 "§YAntoni Chruściel§! is an active leader of the Polish Resistance\n\n§YIdeology:§! Conservative"
+
+  RUS_OKH_No_Polish_SubCommander_2_Portrait:0 "£RUS_Resistance_Target_Vacant"
+  RUS_OKH_Witos_SubCommander_2_Portrait:0 "£RUS_Witos_Target"
+  RUS_OKH_Polish_Resistance_SubCommander2_tooltip:0 "[get_polish_resistance_SubCommander2_Desc]"
+  RUS_OKH_No_Polish_SubCommander_2_Desc:0 "This Position within the Polish Resistance is Currently Vacant"
+  RUS_OKH_Witos_SubCommander_2_Desc:0 "§YWincenty Witos§! is an active leader of the Polish Resistance\n\n§YIdeology:§! Agrarian Liberalism"
+  RUS_OKH_Rosa_SubCommander_2_Desc:0 "§YRosa Luxemburg§! is an active leader of the Polish Resistance\n\n§YIdeology:§! Labour Socialism"
+
+  RUS_OKH_Ukrainian_Resistance_Shukhevych_Leader:0 "£RUS_Shukhevych_Target"
+  RUS_OKH_Ukrainian_Resistance_Makhno_Leader:0 "£RUS_Makhno_Target"
+  RUS_OKH_Ukrainian_Resistance_Leader_tooltip:0 "[get_ukrainian_resistance_leader_desc]"
+  RUS_OKH_Ukrainian_Resistance_Shukhevych_Leader_Desc:0 "§YRoman Shukhevych§! is the leader of the §YUkrainian Insurrectionist Army§!, currently the dominant faction of the Ukrainian Resistance.\n\n§YIdeology:§! Reactionary Ethno-Natioalism"
+  RUS_OKH_Ukrainian_Resistance_Makhno_Leader_Desc:0 "§YNestor Makhno§! is the leader of the §YPeople's Revolutionary Militia§!, currently the dominant faction of the Ukrainian Resistance.\n\n§YIdeology:§! Revolutionary Anarchism"
+  RUS_OKH_Ukrainian_Resistance_Bandera_Leader_Desc:0 "§YStepan Bandera§! is the leader of the §YUkrainian Insurrectionist Army§!, currently the dominant faction of the Ukrainian Resistance.\n\n§YIdeology:§! Ultranationalism"
+  RUS_OKH_Ukrainian_Resistance_Petliura_Leader_Desc:0 "§YSymon Petliura§! is the leader of the §YUkrainian People's Front§!, currently the dominant faction of the Ukrainian Resistance.\n\n§YIdeology:§! State Socialist"
+  RUS_OKH_Ukrainian_Resistance_Shumsky_Leader_Desc:0 "§YAlexander Shumsky§! is the leader of the §YUkrainian People's Front§!, currently the dominant faction of the Ukrainian Resistance.\n\n§YIdeology:§! Classical Jacobin"
+
+  RUS_OKH_No_Central_Baltic_Leadership_Leader:0 "£RUS_Resistance_Target_Vacant"
+  RUS_OKH_Baltic_Resistance_Leader_tooltip:0 "[get_baltic_resistance_leader_desc]"
+  RUS_OKH_No_Central_Baltic_Leadership_Desc:0 "The §YForest Brothers§! Resistance is diffuse and currently lacks a central leadership figure."
+  RUS_OKH_Sprogis_Baltic_Leadership_Desc:0 "§YArturs Sproģis§! is the leader of the §YLatvian People's Alliance§!, currently the dominant faction of the Baltic Resistance.\n\n§YIdeology:§! Classical Jacobin"
+  RUS_OKH_Lobe_Baltic_Leadership_Desc:0 "§YKārlis Lobe§! is the leader of the §YLatvian Independentists§!, currently the dominant faction of the Baltic Resistance.\n\n§YIdeology:§! Reactionary Ethno-Nationalist"
+  RUS_OKH_Veiss_Baltic_Leadership_Desc:0 "§YVoldemārs Veiss§! is the leader of the §YLatvian Independentists§!, currently the dominant faction of the Baltic Resistance.\n\n§YIdeology:§! Ultranationalist"
+  RUS_OKH_Jaan_Baltic_Leadership_Desc:0 "§YJaan Anvelt§! is the leader of the §YTrans-Baltic Liberation Forces§!, currently the dominant faction of the Baltic Resistance.\n\n§YIdeology:§! Directorial Jacobin"
+  RUS_OKH_Sirk_Baltic_Leadership_Desc:0 "§YArtur Sirk§! is the leader of the §YEstonian Independentist Forces§!, currently the dominant faction of the Baltic Resistance.\n\n§YIdeology:§! Right Wing Populist"
+  RUS_OKH_Peterss_Baltic_Leadership_Desc:0 "§YJēkabs Peterss§! is the leader of the §YTrans-Baltic Liberation Forces§!, currently the dominant faction of the Baltic Resistance.\n\n§YIdeology:§! Jacobin"
+  RUS_OKH_Celmins_Baltic_Leadership_Desc:0 "§YGustavs Celmiņš§! is the leader of the §YRiga Circle§!, currently the dominant faction of the Baltic Resistance.\n\n§YIdeology:§! Esoteric Ultranationalism"
+
+  RUS_OKH_Finnish_Resistance_Aarne_Sihvo_Leader:0 "£RUS_Sihvo_Target"
+  RUS_OKH_Finnish_Resistance_Leader_tooltip:0 "[get_finnish_resistance_leader_desc]"
+  RUS_OKH_Finnish_Resistance_Aarne_Sihvo_Desc:0 "§YAarne Sihvo§! is the leader of the §YFree Finnish Army§!, currently the dominant faction of the Finnish Resistance.\n\n§YIdeology:§! Liberal"
+  RUS_OKH_Finnish_Resistance_Kosola_Desc:0 "§YVihtori Kosola§! is the leader of the §YFinnish National Alliance§!, currently the dominant faction of the Finnish Resistance.\n\n§YIdeology:§! Ultranationalism"
+  RUS_OKH_Finnish_Resistance_Osterman_Desc:0 "§YHugo Österman§! is the leader of the §YFree Finnish Army§!, currently the dominant faction of the Finnish Resistance.\n\n§YIdeology:§! Pragmatism"
+  RUS_OKH_Finnish_Resistance_Takkinen_Desc:0 "§YJalmari Takkinen§! is the leader of the §YKarelo-Finnish United Front§!, currently the dominant faction of the Finnish Resistance.\n\n§YIdeology:§! Ethno-Nationalist"
+  RUS_OKH_Finnish_Resistance_Hall_Desc:0 "§YArvo Halberg§! is the leader of the §YFinnish Labour Riflemen§!, currently the dominant faction of the Finnish Resistance.\n\n§YIdeology:§! Jacobin"
+
 
 
   ########################## 
