--- a/localisation/english/PB_Traits_l_english.yml
+++ b/localisation/english/PB_Traits_l_english.yml
@@ -69,3 +69,5 @@
   finnish_desc:0 "This General is of Finnish descent"
   Inexperienced:0 "Inexperienced"
   Inexperienced_desc:0 "This General has not experienced as much combat as their fellows, and while eager to fight, they may not be as effective as more seasoned military staff."
+
+  Recursive_Immortality:0 "Recursive Immortality"
