--- a/localisation/english/PB_News_Events_l_english.yml
+++ b/localisation/english/PB_News_Events_l_english.yml
@@ -990,6 +990,29 @@
   PBNews.250.d:0 "The Imperial Broadcasting Service announced the death of her Imperial Majesty Queen Victoria, who passed in her sleep yesterday evening. Victoria was the longest reigning monarch in human history, leading the British Empire through the Second Renaissance and the Great War. Victoria’s death has been met with a period of national mourning and the suspension of telescreen programming across the IBS for the remainder of the day.\n\nGovernor-General Prince Albert, previously moved to Carnegia as the heir apparent, is expected to be coronated later this evening."
   PBNews.250.a:0 "A new British Empire follows in her wake"
 
+  PBNews.251.t:0 "QUEEN VICTORIA LIVES?"
+  PBNews.251.d:0 "Earlier today, Queen Victoria appeared before a press conference to announce her participation in yet another radical new medical procedure. Using scientific advancements by the British government, the Empire has now cracked the source of functional human immortality. Through a process of decantering and neurological transfer, the human mind can now in effect be transferred to a newer, younger body.\n\nThe announcement has been met with both praise and criticism, with some sources stating concern about the natural endgame of this technology and its' potential abuses."
+  PBNews.251.a:0 "What next, a third Victoria?"
+
+  PBNews.252.t:0 "ST. PETERSBURG ATTACKED"
+  PBNews.252.d:0 "Panic gripped St. Petersburg today as terrorists assaulted the city, upending a parade and speech planned by Tsar Michael II. Russian authorities released information that both the Tsar and Prime Minister had been attacked but refrained from giving further information on their condition. Two bombs were detonated while the attack was ongoing, leaving nearly seventy people dead and over a hundred injured.\n\nIt has since been confirmed that the explosives used were “dirty” teleforce bombs created using material reported stolen from a Galician peacekeeping patrol in September."
+  PBNews.252.a:0 "What is going on over there?"
+
+  PBNews.253.t:0 "RIGA AIRSHIP HIJACKED"
+  PBNews.253.d:0 "Shortly after taking off from Riga Airport, the luxury airship “Polaris 2” was hijacked by Baltic partisans and diverted from their original destination in Stockholm. The airship, owned by the Russian state airline “Rossiya International”, has since been moved into a holding pattern over the Baltic Sea.\n\nThe partisans aboard have refused to negotiate with Russian officials, rather opting to make overtures to the German embassy in Stockholm, requesting political asylum in exchange for the peaceful return of the 182 hostages aboard the Polaris."
+  PBNews.253.a:0 "Where was the Okhrana during this?"
+
+  PBNews.254.t:0 "WAR ON TERROR?"
+  PBNews.254.d:0 "Following the attacks on St. Petersburg and the hijacking in Riga, the Russian government has announced plans for a comprehensive anti-partisan campaign across Eastern Europe. Both the Okhrana and Russian Army have seen vastly increased budgets as forces descend on Russia’s Western territories to restore order. Arising after the defeat in the First National Awakening, partisan forces across the region have been a constant threat to Russian stability.\n\nThe attacks in the least month have, however, clearly struck a nerve in Russia’s political establishment and likely uncorked the bottle of their military industrial complex."
+  PBNews.254.a:0 "One man's freedom fighter is another man's terrorist."
+  PBNews.254.b:0 "One man's terrorist is another man's freedom fighter."
+
+  PBNews.255.t:0 "GERMAN CONSULATE EXPELLED"
+  PBNews.255.d:0 "The German consulate in Russia was expelled today following the discovery of documents tying German intelligence to Polish resistance groups. While the Evidenzbureau has refuted these claims, the Russian government published independent documentation showing that Germany had provided economic assistance to the rebels.\n\nRelations between the two countries have soured entirely; particularly after Russian diplomats came to blows with the evacuating German Consulate staff. Frankfurt has since officially suggested that German nationals leave Russia for the foreseeable future."
+  PBNews.255.a:0 "Diplomacy is a lost art, it seems."
+  PBNews.255.b:0 "Good riddance."
+  PBNews.255.c:0 "These accusations are outrageous!"
+
   stockcrisis.1.t:0 "The Stock Crisis hits the Empire"
   stockcrisis.1.d:0 ""
   stockcrisis.1.a:0 "Oh dear"
