--- a/localisation/english/PB_Traits_l_english.yml
+++ b/localisation/english/PB_Traits_l_english.yml
@@ -71,3 +71,4 @@
   Inexperienced_desc:0 "This General has not experienced as much combat as their fellows, and while eager to fight, they may not be as effective as more seasoned military staff."
 
   Recursive_Immortality:0 "Recursive Immortality"
+  Recursive_Immortality_desc:0 "This general has undergone the Recursive Decantering Process, implanting their nervous system in a new replicated body. Due to this, they are far less likely to suffer illnesses or be meaningfully wounded in combat."
