--- a/localisation/english/PB_Prussia_l_english.yml
+++ b/localisation/english/PB_Prussia_l_english.yml
@@ -17,6 +17,17 @@
   PRS_Gas_Attack:0 "Gas Attack"
 
   ##########################
+  # PARTIES
+  ##########################
+
+  PRS_NI_Dead_lol_long:0 "Bund preußischer Neoimperialisten"
+  PRS_NI_Dead_lol:0 "Vaterlandsfront Remnants"
+  PRS_DS_2_long:0 "Junge Offiziers-Clique"
+  PRS_DS_2:0 "Offiziers-Clique"
+  PRS_AN_2_long:0 "Preußische Freimarktpartei"
+  PRS_AN_2:0 "Partei des freien Marktes"
+
+  ##########################
   # TRAITS
   ##########################
 
@@ -33,12 +44,14 @@
   PB_Father_of_All_Germans:0 "Father Of All Germans"
   PB_Father_of_All_Germans_tt:0 "  - §RDeath Before Dishonour!§!"
   trait_PRS_Son_Of_The_Reich:0 "Son Of The Reich"
+  PB_Great_Reformer:0 "Great Reformer"
 
   ##########################
   # STATE MODIFIERS
   ##########################
 
   PRS_Industrial_Patriotism:0 "Industrial Patriotism"
+  PRS_Imperial_Militia_Presence:0 "Imperial Militia Presence"
 
   ##########################
   # TECH
@@ -72,6 +85,7 @@
   PRS_Open_New_Academies_tt:0 "\nAdds a new hidden national spirit:\n"
   PRS_Impending_Royal_Coup_tt:0 "§gThe Junkers will take power through a bloody coup and restore the Prussian monarchy§!\n\nThis will load the Anarcho-Lib focus tree for Prussia, purging the Junkers by completing the focus '§HLiquidate The Princes§! and letting the Royal Coup timer tick down will result in some alternative options in the Anarcho-Lib tree."
   prussia_focus_anarcho:0 "Prussian Anarcho-Lib Tree"
+  PB_PRS_Secure_The_State_tt:0 "The Prussian Army will be stood down and will undergo a period of ideological and political reform.\n\n"
 
   ##########################
   # MECHANICS
@@ -157,6 +171,9 @@
   PRS_Saxony_Excavation_Site_desc:0 "Saxony Excavation Site Report: Recent findings of local Saxon tribes predating the rise of Rome by about two hundred years has recently just been discovered on the outskirts of Dresden. Important information regarding early hunting practises of the local tribal germans has been reported among other findings."
   PRS_Saxony_Excavation_Site_tt:0 "§YÜbermensch§!: §G+15%§! Monthly Population Growth"
 
+  PB_PRS_Consolidate_The_State:0 "Consolidate The State"
+  PB_PRS_Consolidate_The_State_desc:0 "\n\n\n\n\n\nNeo-Imperialist party popularity: [?party_popularity@ni|%H0] I Anarcho-Liberals party popularity: [?party_popularity@an|%H0]"
+
   ##########################
   # DYNAMIC MODIFIERS
   ##########################
@@ -226,6 +243,8 @@
   PB_PRS_National_Rebirth:0 "National Rebirth"
 
   PRS_New_Academies:0 "New Academies"
+
+  PB_PRS_If_Day:0 "If Day"
 
   ##########################
   # Ministers/Generals/Tech Teams
@@ -628,6 +647,9 @@
   Prussian.19.a:0 "Give it to them for free."
   Prussian.19.b:0 "Demand Industrial Compensation."
   Prussian.19.c:0 "Not in a thousand years."
+  Prussian_Anarcho.1.t:0 "Prussian Exiles Arrive"
+  Prussian_Anarcho.1.d:0 "" 
+  Prussian_Anarcho.1.a:0 "Anything To Further The Neo-Imperialist Cause"
 
   ##########################
   # COSMETIC TAGS
