--- a/localisation/english/PB_Prussia_l_english.yml
+++ b/localisation/english/PB_Prussia_l_english.yml
@@ -173,6 +173,15 @@
 
   PB_PRS_Consolidate_The_State:0 "Consolidate The State"
   PB_PRS_Consolidate_The_State_desc:0 "\n\n\n\n\n\nNeo-Imperialist party popularity: [?party_popularity@ni|%H0] I Anarcho-Liberals party popularity: [?party_popularity@an|%H0]"
+ 
+  PB_PRS_International:0 "The International"
+  PB_PRS_International_desc:0 "\n\n\n\n\n\nThe §HInternational§! has been the brainchild of Philipp Bouhler since his coming to power. The International was designed as a front against what Bouhler refers to as the "§RJudeo Liberal World Order§!". While the organisation is still in its early years the International, for all intents and purposes, is to be kept hidden by all governmental and non-governmental bodies. Effectively the International is a §gtightly monitored global council§! known only by a few minds across the globe. The International operates in the shadows and can be best defined as a shadow government operating primarily in Prussia. The purpose of the International is first; the §Reradication of all leftist thought and influence§!, and second; the establishment of a §L‘Universal Empire’§!. The second goal of the International is an even greater well-kept secret than the organisation itself and has yet to be revealed to the remainder of the council by Bouhler. The Universal Empire is an imagined, empire, that will in the words of Bouhler “§gUnite the disparate tribes of the globe under one single universal banner, with one single purpose, under a single people.§!” This fact is to remain indefinitely secret until Bouhler decides the time is right, should the reality of the International be somehow compromised then this very organisation will likely cease to function.\n\nIf we are to achieve the ambitions of the International then we must spread the influence of the council across the globe, invest in certain continents through the respective decisions below and should the presence of the council reach a certain threshold new opportunities may prevent themselves. Be careful though, as some members of the council may have their own ideas.\n\n\n                                              \n\n\n\n\nClick on each individual council member to access decisions based on the continent under their jurisdiction.\n"
+  PRS_Member_1:0 "Council Member One: Jurisdiction over §YNorth America§!\n\nClick to open decisions relating to International operations in §YNorth America§!"
+  PRS_Member_2:0 "Council Member Two: Jurisdiction over §YSouth America§!\n\nClick to open decisions relating to International operations in §YSouth America§!"
+  PRS_Member_3:0 "Council Member Three: Jurisdiction over §YEurope§!\n\nClick to open decisions relating to International operations in §YEurope§!"
+  PRS_Member_4:0 "Council Member Four: Jurisdiction over §YAfrica§!\n\nClick to open decisions relating to International operations in §YAfrica§!"
+  PRS_Member_5:0 "Council Member Five: Jurisdiction over §YAsia§!\n\nClick to open decisions relating to International operations in §YAsia§!"
+  PRS_Member_6:0 "Council Member Six: Jurisdiction over §YMiddle East§!\n\nClick to open decisions relating to International operations in §YMiddle East§!"
 
   ##########################
   # DYNAMIC MODIFIERS
@@ -658,3 +667,7 @@
   GREATER_PRS:0 "Greater Prussian Reich"
   GREATER_PRS_DEF:0 "the Greater Prussian Reich"
   GREATER_PRS_ADJ:0 "Prussian"
+
+  PRS_Universal_Empire:0 "Universal Empire"
+  PRS_Universal_Empire_DEF:0 "the Universal Empire"
+  PRS_Universal_Empire_ADJ:0 "Human"
